<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daredevil</string>
    <string name="title">Daredevil</string>
    <string name="fullname">Full Name:</string>
    <string name="alignment">Alignment:</string>
    <string name="firstappearance">First Appearance:</string>
    <string name="biography">Biography</string>
    <string name="intelligence">Intelligence:</string>
    <string name="Strength">Strength:</string>
    <string name="power">Power:</string>
    <string name="durability">Durability:</string>
    <string name="powerstats">Power Stats</string>
    <string name="speed">Speed:</string>
    <string name="combat">Combat:</string>
    <string name="group">Group Affiliation:</string>
    <string name="relatives">Relatives:</string>
    <string name="appearance">Appearance</string>
    <string name="eyecolor">Eye Color:</string>
    <string name="race">Race:</string>
    <string name="haircolor">Hair Color:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>

</resources>